# BPlayer

./: .gitignore  CMakeLists.txt  main.cpp  main.qrc
include/: sentence.hpp  srtHandler.hpp  video.hpp  word.hpp
qml/: mainWindow.qml
src/: CMakeLists.txt  sentence.cpp  srtHandler.cpp  video.cpp  word.cpp
srt/: Peppa pig S01.E15 - Daddy Loses His Glasses.srt
tests/: CMakeLists.txt  audio_test.cpp  sentence_test.cpp  srtHandlerTest.cpp  videoTest.cpp  word_test.cpp
